{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 203,
  "lineage": "c1ca1018-4c41-3b9f-09f0-890f21711cb5",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0342cfb028d6aff5a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:301782007642:subnet/subnet-0342cfb028d6aff5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "available_ip_address_count": 4083,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0342cfb028d6aff5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "301782007642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "state": "available",
            "vpc_id": "vpc-0a8a952bd82a9c081"
          }
        },
        {
          "index_key": "subnet-0b5f44f6a7c3f2a17",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:301782007642:subnet/subnet-0b5f44f6a7c3f2a17",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "available_ip_address_count": 4084,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5f44f6a7c3f2a17",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "301782007642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "state": "available",
            "vpc_id": "vpc-0a8a952bd82a9c081"
          }
        },
        {
          "index_key": "subnet-0bbac2221b29ffa27",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:301782007642:subnet/subnet-0bbac2221b29ffa27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "available_ip_address_count": 248,
            "cidr_block": "172.31.220.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbac2221b29ffa27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "301782007642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "state": "available",
            "tags": {
              "Name": "pratyush-private-1b",
              "Owner": "pratyush"
            },
            "vpc_id": "vpc-0a8a952bd82a9c081"
          }
        },
        {
          "index_key": "subnet-0dcf98e23a5861550",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:301782007642:subnet/subnet-0dcf98e23a5861550",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "available_ip_address_count": 4082,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcf98e23a5861550",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "301782007642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "state": "available",
            "vpc_id": "vpc-0a8a952bd82a9c081"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:301782007642:vpc/vpc-0a8a952bd82a9c081",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-097b1ca05794939fa",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0aa0b951be62c2363",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8a952bd82a9c081",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a461c6375ab308d3",
            "owner_id": "301782007642",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "strapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:301782007642:loadbalancer/app/strapi-alb-irfan/509d2add101e0732",
            "arn_suffix": "app/strapi-alb-irfan/509d2add101e0732",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "strapi-alb-irfan-1870158425.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:301782007642:loadbalancer/app/strapi-alb-irfan/509d2add101e0732",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "strapi-alb-irfan",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0c4210a1f940574bf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0342cfb028d6aff5a"
              },
              {
                "subnet_id": "subnet-0b5f44f6a7c3f2a17"
              },
              {
                "subnet_id": "subnet-0bbac2221b29ffa27"
              }
            ],
            "subnets": [
              "subnet-0342cfb028d6aff5a",
              "subnet-0b5f44f6a7c3f2a17",
              "subnet-0bbac2221b29ffa27"
            ],
            "tags": {
              "Deployment": "blue-green",
              "Environment": "production",
              "Name": "strapi-alb"
            },
            "tags_all": {
              "Deployment": "blue-green",
              "Environment": "production",
              "Name": "strapi-alb"
            },
            "vpc_id": "vpc-0a8a952bd82a9c081",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_subnet.selected",
            "data.aws_subnets.default_vpc_subnets",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:301782007642:listener/app/strapi-alb-irfan/509d2add101e0732/b95b62a23f48afbb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:301782007642:listener/app/strapi-alb-irfan/509d2add101e0732/b95b62a23f48afbb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:301782007642:loadbalancer/app/strapi-alb-irfan/509d2add101e0732",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "strapi-listener-http"
            },
            "tags_all": {
              "Name": "strapi-listener-http"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.strapi",
            "aws_lb_target_group.blue",
            "aws_security_group.alb_sg",
            "data.aws_subnet.selected",
            "data.aws_subnets.default_vpc_subnets",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:301782007642:listener/app/strapi-alb-irfan/509d2add101e0732/5bf11c515a1b60cd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:301782007642:targetgroup/strapi-tg-green-irfan/84b74c00fde1f3d0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:301782007642:listener/app/strapi-alb-irfan/509d2add101e0732/5bf11c515a1b60cd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:301782007642:loadbalancer/app/strapi-alb-irfan/509d2add101e0732",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "strapi-listener-test"
            },
            "tags_all": {
              "Name": "strapi-listener-test"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.strapi",
            "aws_lb_target_group.green",
            "aws_security_group.alb_sg",
            "data.aws_subnet.selected",
            "data.aws_subnets.default_vpc_subnets",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:301782007642:targetgroup/strapi-tg-blue-irfan/bce567fb5443f6f4",
            "arn_suffix": "targetgroup/strapi-tg-blue-irfan/bce567fb5443f6f4",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:301782007642:targetgroup/strapi-tg-blue-irfan/bce567fb5443f6f4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:301782007642:loadbalancer/app/strapi-alb-irfan/509d2add101e0732"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "strapi-tg-blue-irfan",
            "port": 1337,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Color": "blue",
              "Environment": "production",
              "Name": "strapi-tg-blue"
            },
            "tags_all": {
              "Color": "blue",
              "Environment": "production",
              "Name": "strapi-tg-blue"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a8a952bd82a9c081"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:301782007642:targetgroup/strapi-tg-green-irfan/84b74c00fde1f3d0",
            "arn_suffix": "targetgroup/strapi-tg-green-irfan/84b74c00fde1f3d0",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:301782007642:targetgroup/strapi-tg-green-irfan/84b74c00fde1f3d0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:301782007642:loadbalancer/app/strapi-alb-irfan/509d2add101e0732"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "strapi-tg-green-irfan",
            "port": 1337,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Color": "green",
              "Environment": "production",
              "Name": "strapi-tg-green"
            },
            "tags_all": {
              "Color": "green",
              "Environment": "production",
              "Name": "strapi-tg-green"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a8a952bd82a9c081"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:301782007642:security-group/sg-0c4210a1f940574bf",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4210a1f940574bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Test listener for Blue/Green deployments",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "strapi-alb-sg-irfan",
            "name_prefix": "",
            "owner_id": "301782007642",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "strapi-alb-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "strapi-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8a952bd82a9c081"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:301782007642:security-group/sg-07feb02c90b442a00",
            "description": "Allow Strapi traffic from ALB to ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07feb02c90b442a00",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Strapi HTTP from ALB",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c4210a1f940574bf"
                ],
                "self": false,
                "to_port": 1337
              }
            ],
            "name": "strapi-ecs-sg-ap",
            "name_prefix": "",
            "owner_id": "301782007642",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "strapi-ecs-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "strapi-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8a952bd82a9c081"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:301782007642:security-group/sg-0cd97a5a5f6bc3861",
            "description": "Allow DB access from ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd97a5a5f6bc3861",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from ECS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07feb02c90b442a00"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "irfan-rds-sg-ap",
            "name_prefix": "",
            "owner_id": "301782007642",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "irfan-rds-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "irfan-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8a952bd82a9c081"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}